_Subscribepartial finished, no functionality yet. need to fix spacing on mobile.

--- a/Silicon-design-webapp/wwwroot/css/site.css
+++ b/Silicon-design-webapp/wwwroot/css/site.css
@@ -367,6 +367,12 @@ h6, .h6 {
   color: #FFFFFF;
 }
 
+.card {
+  box-shadow: 1px 1px 3px #D4D7E5, 1px 3px 5px #E2E5F1, 2px 6px 8px #EFF2FC, 3px 9px 12px #F3F6FF;
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+
 a {
   line-height: 160%;
   font-weight: 400;
